Fix queue list on mobile Fix mobile slide-up menu Adjust responsive content size values

--- a/src/global/stylesheet/base/_layout.scss
+++ b/src/global/stylesheet/base/_layout.scss
@@ -62,7 +62,7 @@ body {
 	}
 
 	::-webkit-scrollbar-track {
-		background: #5e5e5e2f;
+		background: #3c3e5300;
 		border-radius: 0.625rem;
 		height: 0.916667rem;
 		width: 100%;
